--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,7 +3,7 @@
          xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd">
 
     <arg name="basepath" value="."/>
-    <arg name="cache" value=".phpcs-cache"/>
+    <arg name="cache" value=".phpcs.cache"/>
     <arg name="colors"/>
     <arg name="extensions" value="php"/>
     <arg name="parallel" value="80"/>
@@ -15,6 +15,5 @@
     <file>src</file>
     <file>tests</file>
 
-    <!-- Include all rules from the IonBytes Coding Standard -->
-    <rule ref="IonBytes"/>
+    <rule ref="PSR12"/>
 </ruleset>
