--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Hades\\Tests\\Unit\\": "tests/unit/"
+            "Hades\\Tests\\Unit\\": "tests/unit/",
+            "Hades\\Tests\\Stubs\\": "tests/stubs/"
         }
     },
     "config": {
