chore: some changes

--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,21 @@
 /.idea/
 /.fleet/
 /.run/
+/.vscode/
 
 # composer
 composer.lock
-/composer.phar
-/auth.json
-/vendor
+composer.phar
+/vendor/
 
 # phpunit
 .phpunit.cache
-coverage/
 phpunit.xml
 
 # php-cs-fixer
 .php-cs-fixer.cache
+.php-cs-fixer.php
 
 # phpstan
-phpstan.neon
+.phpstan.cache
+.phpstan.neon
