--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,12 @@
+* text=auto eol=lf
+
+*.md diff=markdown
+*.php diff=php
+
 /.gitattributes export-ignore
-/.github/ export-ignore
+/.github export-ignore
 /.gitignore export-ignore
-/docs/ export-ignore
-/tests/ export-ignore
-/phpcs.xml.dist export-ignore
+/docs export-ignore
+/tests export-ignore
 /phpstan.neon.dist export-ignore
 /phpunit.xml.dist export-ignore
